k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: tp-projet-2025
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
template:
  metadata:
    labels:
      app: mysql
  spec:
    containers:
    - name: mysql
      image: mysql:8.0
      ports:
      - containerPort: 3306
      args:
      - "--default-authentication-plugin=mysql_native_password"
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: tp-projet-2025
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
