k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tp-projet-service
  namespace: tp-projet-2025
spec:
  type: NodePort
  selector:
    app: tp-projet
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
