k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp-projet-ingress
  namespace: tp-projet-2025
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tp-projet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tp-projet-service
            port:
              number: 80
